# self-evolving-aiagent

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  EVOLUTION_FEATURES.md  EXAMPLES.md  FULLY_EVOLVED_ARCHITECTURE.md  OPERATIONS.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  start.sh
.github/workflows/: ci.yml
api/: server.py  server_evolved.py  server_v2.py
core/: __init__.py  agent.py  evolved_agent.py  executor.py  llm_engine.py  super_agent.py
core/code_gen/: __init__.py  generator.py
core/critic/: __init__.py  layer.py
core/environment/: __init__.py  interaction.py
core/evaluation/: __init__.py  lab.py  reference_kpi.json  system.py
core/evolution/: __init__.py  loop.py
core/genetics/: __init__.py  evolver.py
core/memory/: __init__.py  embedder.py  hierarchical.py  hierarchical_v2.py  vector_store.py
core/multi_agent/: __init__.py  orchestrator.py
core/rl/: __init__.py  reward_model.py  trainer.py
core/self_modification/: __init__.py  runtime.py
core/skills/: __init__.py  system.py
core/strategy/: __init__.py  long_term.py
core/structural_evolution/: __init__.py  system.py
core/testing/: __init__.py  test_runner.py
examples/: ENHANCED_AGENT_EXAMPLES.py
tests/: test_agent.py  test_api_integration.py
tools/: run_regression_gate.py
