[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "self-evolving-aiagent"
version = "0.1.0"
description = "Self-evolving AI agent with memory, critic and structural evolution subsystems"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "mozaika228" }]
dependencies = [
  "fastapi==0.104.1",
  "uvicorn==0.24.0",
  "aiohttp==3.9.1",`n  "httpx==0.27.0",
  "qdrant-client==1.17.1",
  "redis==5.0.1",
  "sentence-transformers>=2.7.0,<4.0.0",
  "torch>=2.3.0,<3.0.0",
  "scikit-learn==1.3.2",
  "numpy==1.26.2",
  "pydantic==2.5.0",
  "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest==7.4.3",
  "pytest-cov==4.1.0",
  "pytest-asyncio==0.21.1",
  "black==23.12.0",
  "flake8==6.1.0",
  "mypy==1.7.1",
  "pre-commit>=3.7.0,<4.0.0",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
exclude = ["^tests/"]
